--- a/flip.css
+++ b/flip.css
@@ -205,6 +205,7 @@ footer{
     padding: 1em;
 }
 footer .row{
+    margin-right: 20px;
     display: flex;
     justify-content: space-between; 
     width: 300px;
